prevent scrolling on mobile

--- a/styles.css
+++ b/styles.css
@@ -13,6 +13,8 @@ html {
      
 }
 body {
+  overflow: hidden;
+  position: relative;
   margin:0;
   padding:0;
   font-family: sans-serif;
